# food-inspector

./: .gitignore  App.xaml  App.xaml.cs  BUILD_FIX_README.md  Directory.Build.props  FEATURES.md  FoodInspector.csproj  FoodInspector.sln  FoodInspector_TemporaryKey.pfx  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  MainPage.xaml  MainPage.xaml.cs  ManualTestScenarios.cs  MauiProgram.cs  README.md  VALIDATION.md  cli.py  config.json  example.py  global.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: dotnet-maui-ci.yml  tools-python-ci.yml
Components/: Routes.razor  _Imports.razor
Components/Layout/: MainLayout.razor
Components/Pages/: BarcodeEntryDialog.razor  CrossReactivityBank.razor  History.razor  (+2 more)
Data/: FoodInspectorDbContext.cs
FoodInspector.Tests/: FoodInspector.Tests.csproj  MatchingServiceTests.cs  TestAbstractions.cs  UnitTest1.cs
Models/: Models.cs
Pages/: ScanPage.xaml  ScanPage.xaml.cs
Services/: DatabaseService.cs  ExportService.cs  InflammationTimelineService.cs  IngredientAnalysisService.cs  IngredientNormalizationService.cs  MatchingService.cs  ScanningServices.cs  SecureStorageService.cs  SettingsService.cs
data/: cross_reactivity.yaml  ingredient_synonyms.yaml
dotnet-tests/: CrossReactivity.Tests.csproj  MatchingServiceTests.cs  TestAbstractions.cs  TestInterfaces.cs
examples/: demo.py  sample_export.json  test_scoring.py
food_inspector/: __init__.py  export.py  scoring.py
tests/: test_cross_reactivity.py  test_matcher.py
tools/: IMPLEMENTATION.md  README.md
wwwroot/: index.html
(+26 files in other folders)
